--- a/Pet-Story/package.json
+++ b/Pet-Story/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.9.1",
     "leaflet": "^1.9.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -28,6 +30,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.7.11",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
     "dep": "^0.18.3",
