--- a/Pet-Story/package.json
+++ b/Pet-Story/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href='https://Kate4ka007.github.io/PetStory/'",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "deploy": "ng deploy --base-href='https://Kate4ka007.github.io/PetStory/'"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +35,7 @@
     "@types/leaflet": "^1.7.11",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
+    "angular-cli-ghpages": "^1.0.5",
     "dep": "^0.18.3",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
